feat: more test for conformances